Customizations for The Backroom

--- a/UserSecrets.props
+++ b/UserSecrets.props
@@ -1,17 +1,19 @@
 <!--
  * UserSecrets.props
  * 
- *   Created: 2022-11-23-06:14:24
- *   Modified: 2022-11-23-06:14:25
+ *   Created: 2022-12-01-05:58:51
+ *   Modified: 2022-12-01-05:59:37
  * 
- *   Author: Justin Chase <justin@justinwritescode.com>
+ *   Authors: 
+ *     Justin Chase <justin@thebackroom.bot>
+ *     Municipal Drew <drew@wheatleythecat.com>
  *   
- *   Copyright © 2022 Justin Chase, All Rights Reserved
+ *   Copyright © 2022 Justin Chase & Municipal Drew, All Rights Reserved
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
 <Project>
-	<PropertyGroup>
-    <UserSecretsId>f46585c5-564a-6584-1234-eba29ed0cfc7</UserSecretsId>
-	</PropertyGroup>
+  <PropertyGroup>
+    <UserSecretsId>f46585c5-564a-4a85-b352-eba29ed0cfc7</UserSecretsId>
+  </PropertyGroup>
 </Project>
