--- a/AssemblySigning.props
+++ b/AssemblySigning.props
@@ -1,18 +1,20 @@
 <!--
  * AssemblySigning.props
  * 
- *   Created: 2022-10-21-11:40:42
- *   Modified: 2022-11-04-10:09:52
+ *   Created: 2022-12-01-05:58:45
+ *   Modified: 2022-12-01-05:59:27
  * 
- *   Author: Justin Chase <justin@justinwritescode.com>
+ *   Authors: 
+ *     Justin Chase <justin@thebackroom.bot>
+ *     Municipal Drew <drew@wheatleythecat.com>
  *   
- *   Copyright © 2022 Justin Chase, All Rights Reserved
+ *   Copyright © 2022 Justin Chase & Municipal Drew, All Rights Reserved
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
 <Project>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), "assets/JustinWritesCode.snk"))/assets/JustinWritesCode.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)../assets/The-Backroom.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 </Project>
