--- a/Authors-Owners.props
+++ b/Authors-Owners.props
@@ -25,8 +25,7 @@
   <PropertyGroup>
     <GetPackageMetadataDependsOn>
       $(GetPackageMetadataDependsOn);
-      SetPackageAuthors;
-      SetPackageOwners
+      SetPackageOwnersAndAuthors
     </GetPackageMetadataDependsOn>
   </PropertyGroup>
 </Project>
