changing some things

--- a/GetPackageContents.targets
+++ b/GetPackageContents.targets
@@ -16,9 +16,9 @@
 			<_PackageFile Include="$(OutputPath)**/*.dll" TargetFramework="%(RecursiveDir)/" />
 			<_PackageFile Include="$(OutputPath)**/*.xml" TargetFramework="%(RecursiveDir)/" />
 			<_PackageFile Include="$(OutputPath)**/*.pdb" TargetFramework="%(RecursiveDir)/" />
-			<_PackageFile Include="$(OutputPath)*.dll" />
+			<!-- <_PackageFile Include="$(OutputPath)*.dll" />
 			<_PackageFile Include="$(OutputPath)*.xml" />
-			<_PackageFile Include="$(OutputPath)*.pdb" />
+			<_PackageFile Include="$(OutputPath)*.pdb" /> -->
 			<PackageFile Include="%(_PackageFile.Identity)" PackagePath="lib/%(_PackageFile.RecursiveDir)%(_PackageFile.Filename)%(_PackageFile.Extension)" Condition="Exists(%(_PackageFile.Identity))" />
 		</ItemGroup>
 	</Target>
