--- a/UserSecrets.props
+++ b/UserSecrets.props
@@ -1,17 +1,16 @@
 <!--
- * UserSecrets.props
- * 
- *   Created: 2022-12-01-05:58:51
- *   Modified: 2022-12-01-05:59:37
- * 
- *   Authors: 
- *     Justin Chase <justin@thebackroom.bot>
- *     Municipal Drew <drew@wheatleythecat.com>
- *   
- *   Copyright © 2022 Justin Chase & Municipal Drew, All Rights Reserved
- *      License: MIT (https://opensource.org/licenses/MIT)
+ UserSecrets.props
+ 
+   Created: 2022-10-31-09:10:46
+   Modified: 2022-10-31-09:10:46
+ 
+   Authors: 
+     Justin Chase <justin@thebackroom.bot>
+     Municipal Drew <drew@wheatleythecat.com>
+   
+   Copyright © 2022 Justin Chase & Municipal Drew, All Rights Reserved
+      License: MIT (https://opensource.org/licenses/MIT)
 -->
-
 <Project>
   <PropertyGroup>
     <UserSecretsId>f46585c5-564a-4a85-b352-eba29ed0cfc7</UserSecretsId>
