--- a/AssemblySigning.props
+++ b/AssemblySigning.props
@@ -1,15 +1,13 @@
 <!--
- * AssemblySigning.props
- * 
- *   Created: 2022-12-01-05:58:45
- *   Modified: 2022-12-01-05:59:27
- * 
- *   Authors: 
- *     Justin Chase <justin@thebackroom.bot>
- *     Municipal Drew <drew@wheatleythecat.com>
- *   
- *   Copyright © 2022 Justin Chase & Municipal Drew, All Rights Reserved
- *      License: MIT (https://opensource.org/licenses/MIT)
+ AssemblySigning.props
+ 
+   Created: 2022-10-21-11:40:42
+   Modified: 2022-10-29-02:46:19
+ 
+   Author: Justin Chase <justin@justinwritescode.com>
+   
+   Copyright © 2022 Justin Chase, All Rights Reserved
+      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
 <Project>
