Some minor changes

--- a/GetPackageContents.targets
+++ b/GetPackageContents.targets
@@ -13,13 +13,13 @@
 <Project>
 	<Target Name="_PreparePackageContents" BeforeTargets="GetPackageContents">
 		<ItemGroup>
-			<!-- <_PackageFile Include="$(OutputPath)**/*.dll" TargetFramework="%(RecursiveDir)/" />
+			<_PackageFile Include="$(OutputPath)**/*.dll" TargetFramework="%(RecursiveDir)/" />
 			<_PackageFile Include="$(OutputPath)**/*.xml" TargetFramework="%(RecursiveDir)/" />
-			<_PackageFile Include="$(OutputPath)**/*.pdb" TargetFramework="%(RecursiveDir)/" /> -->
+			<_PackageFile Include="$(OutputPath)**/*.pdb" TargetFramework="%(RecursiveDir)/" />
 			<!-- <_PackageFile Include="$(OutputPath)*.dll" />
 			<_PackageFile Include="$(OutputPath)*.xml" />
 			<_PackageFile Include="$(OutputPath)*.pdb" /> -->
-			<PackageFile Include="%(_PackageFile.Identity)" PackagePath="lib/%(_PackageFile.RecursiveDir)%(_PackageFile.Filename)%(_PackageFile.Extension)" Condition="Exists(%(_PackageFile.Identity))" />
+			<PackageFile Include="@(_PackageFile)" PackagePath="lib/$(TargetFramework)/%(_PackageFile.RecursiveDir)%(_PackageFile.Filename)%(_PackageFile.Extension)" Condition="Exists(%(_PackageFile.Identity))" />
 		</ItemGroup>
 	</Target>
 	<!-- <PropertyGroup>
@@ -27,7 +27,7 @@
 	</PropertyGroup> -->
 	<Target Name="RemoveNonexistentPackageContents" BeforeTargets="Pack;GetPackageContents">
 		<ItemGroup>
-			<PackageFile Remove="@(PackageFile)" Condition="!Exists('%(PackageFile.Identity)')" />
+			<!-- <PackageFile Remove="%(PackageFile.Identity)" Condition="!Exists('%(PackageFile.Identity)')" /> -->
 		</ItemGroup>
 	</Target>
 	<PropertyGroup>
