--- a/CentralPackageVersions.targets
+++ b/CentralPackageVersions.targets
@@ -10,4 +10,4 @@
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
-<Project Sdk="Microsoft.Build.CentralPackageVersions" />
+<Project Sdk="Microsoft.Build.CentralPackageVersions/2.1.3" />
