--- a/CodeGeneration.targets
+++ b/CodeGeneration.targets
@@ -10,7 +10,7 @@
       License: MIT (https://opensource.org/licenses/MIT)
 -->
 <Project>
-  <ItemGroup>
+  <!-- <ItemGroup>
     <ProjectReference 
       Include="@(CodeGenerator->'%(ProjectPath)')"
       OutputItemType="Analyzer" ReferenceOutputAssembly="false" 
@@ -21,5 +21,5 @@
       Include="%(CodeGenerator.PackageName)"
       IncludeAssets="Analyzers" PrivateAssets="All" 
       Condition="'$(Configuration)' != 'Local' And '$(Configuration)' != 'Testing'" />
-  </ItemGroup>
+  </ItemGroup> -->
 </Project>
