--- a/Authors-Owners.targets
+++ b/Authors-Owners.targets
@@ -25,8 +25,8 @@
       <Authors>@(DistinctAuthorsWithEmails);@(DistinctAuthors)</Authors> 
       <Owners>@(DistinctOwnersWithEmails);@(DistinctOwners)</Owners> 
     </PropertyGroup>
-    <Message Text="@(DistinctAuthorsWithEmails);@(DistinctAuthors)" Importance="high" />
-    <Message Text="@(DistinctOwnersWithEmails);@(DistinctOwners)" Importance="high" />
+    <Message Text="@(DistinctAuthorsWithEmails);@(DistinctAuthors)" />
+    <Message Text="@(DistinctOwnersWithEmails);@(DistinctOwners)" />
     <ItemGroup>
       <DistinctAuthors Remove="@(DistinctAuthors)" />
       <DistinctOwners Remove="@(DistinctOwners)" />
