--- a/CentralPackagesFile.props
+++ b/CentralPackagesFile.props
@@ -16,7 +16,7 @@
     <CentralPackagesFile>$([MSBuild]::GetDirectoryNameOfFileAbove("$(MSBuildThisFileDirectory)", "Packages/$(CentralPackagesFileName)"))/Packages/$(CentralPackagesFileName)</CentralPackagesFile>
 	</PropertyGroup>  
 	<Target Name="CustomAfterCentralPackageVersions" BeforeTargets="CheckPackageReferences">
-    <Message Text="CentralPackagesFile: $(CentralPackagesFile)" Importance="High" />
+    <Message Text="CentralPackagesFile: $(CentralPackagesFile)" />
     <Message Text="Build Configuration: $(Configuration)" />
   </Target>
 </Project>
