--- a/AssemblyVersion.targets
+++ b/AssemblyVersion.targets
@@ -10,9 +10,10 @@
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 <Project>
-  <Target Name="SetAssemblyVersion" AfterTargets="GetPackageVersion" DependsOnTargets="GetPackageVersion">
+  <Target Name="SetAssemblyVersion" AfterTargets="GetPackageVersion;MinVer" DependsOnTargets="GetPackageVersion" BeforeTargets="CoreBuild;Build;CoreCompile;GetAssemblyVersion">
     <PropertyGroup>
-      <AssemblyVersion Condition="'$(PackageVersion)' != ''">$([System.Text.RegularExpressions.Regex]::Replace("$(PackageVersion)", "\-.*", ""))</AssemblyVersion>
+      <AssemblyVersion Condition="'$(PackageVersion)' != ''">$([System.Text.RegularExpressions.Regex]::Replace("$(PackageVersion)", "\-.*", "")).0</AssemblyVersion>
+      <Version Condition="'$(PackageVersion)' != ''">$([System.Text.RegularExpressions.Regex]::Replace("$(PackageVersion)", "\-.*", "")).0</Version>
     </PropertyGroup>
   </Target>
 </Project>
