--- a/PackageVersionOverride.targets
+++ b/PackageVersionOverride.targets
@@ -14,6 +14,7 @@
 <Project>
 	<PropertyGroup>
     <AssemblyVersion Condition="'$(Version)' != ''">$([System.Text.RegularExpressions.Regex]::Replace("$(Version)", "\-.*", ""))</AssemblyVersion>
+    <Version Condition="'$(Version)' != ''">$([System.Text.RegularExpressions.Regex]::Replace("$(Version)", "\-.*", ""))</Version>
 	</PropertyGroup>
   <!-- <PropertyGroup>
     <GetPackageVersionDependsOn>
