Checking in so I can work on on the VM

--- a/CompilerVisibleProperties.props
+++ b/CompilerVisibleProperties.props
@@ -10,7 +10,7 @@
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 <Project>
-  <ItemGroup Condition="'@(PackageReference->AnyHaveMetadataValue('Identity', 'ThisAssembly.Project'))' == 'true'">
+  <ItemGroup>
     <ProjectProperty Include="PackageVersion" />
     <ProjectProperty Include="Version" />
     <ProjectProperty Include="Title" />
