--- a/UserSecrets.props
+++ b/UserSecrets.props
@@ -8,7 +8,7 @@
      Justin Chase <justin@thebackroom.bot>
      Municipal Drew <drew@wheatleythecat.com>
    
-   Copyright © 2022 Justin Chase & Municipal Drew, All Rights Reserved
+   Copyright © 2022-2023 Justin Chase & Municipal Drew, All Rights Reserved
       License: MIT (https://opensource.org/licenses/MIT)
 -->
 <Project>
